<resources>
    <string name="app_name" translatable="false">UberComp</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_account">My account</string>
    <string name="history_of_rides">History of rides</string>
    <string name="incoming_ride">Incoming ride</string>
    <string name="chat_support">Chat support</string>
    <string name="tracking_ride">Tracking ride</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="divider">Divider</string>
    <string name="favorites">Favorites</string>
    <string name="order">Order</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="panic">Panic</string>
    <string name="view_reviews">View Reviews</string>
    <string name="view_complaints">View Complaints</string>
    <string name="start_location">Start location</string>
    <string name="destination">Destination</string>
    <string name="describe_your_problem">Describe your problem</string>
    <string name="type_here">Type here...</string>
    <string name="report">Report</string>
    <string name="rate_us">Rate us:</string>
    <string name="leave_a_comment">Leave a comment...</string>
    <string name="submit">Submit</string>
    <string name="driver">Driver:</string>
    <string name="vehicle">Vehicle:</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="vehicle_prices">Vehicle prices</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="price">Price</string>
    <string name="rate">Rate Ride</string>
    <string name="write_a_message">Write a message...</string>
    <string name="send">Send</string>
    <string name="drivers">Drivers</string>
    <string name="passengers">Passengers</string>
    <string name="current_rides">Current rides</string>
    <string name="previous">Previous</string>
    <string name="page_1_of_1">Page 1 of 1</string>
    <string name="next">Next</string>
    <string name="block">Block</string>
    <string name="active">ACTIVE</string>
    <string name="status">Status</string>
    <string name="_1234567890">+1234567890</string>
    <string name="phone_number">Phone Number</string>
    <string name="john_doe_example_com">john.doe@example.com</string>
    <string name="email">Email</string>
    <string name="doe">Doe</string>
    <string name="lastname">Lastname</string>
    <string name="john">John</string>
    <string name="name">Name</string>
    <string name="search_by_name">Search by name</string>
</resources>