<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/vehicle_prices"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/mandali_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TableLayout
        android:id="@+id/tableVehiclePrices"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:padding="12dp"
        android:divider="#DDDDDD"
        android:showDividers="middle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TableRow>
            <TextView
                android:text="@string/vehicle_type"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="12dp"
                android:textSize="18sp"
                android:fontFamily="@font/mandali_regular"
                android:background="@drawable/table_cell_bg"/>

            <EditText
                android:text="@string/price"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="12dp"
                android:textSize="18sp"
                android:fontFamily="@font/mandali_regular"
                android:inputType="numberDecimal"
                android:digits="0123456789."
                android:background="@drawable/table_cell_bg"/>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="12dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
