<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:padding="20dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/describeProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/describe_your_problem"
            android:textColor="@color/background"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/typeHere"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="12dp"
            android:hint="@string/type_here"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/describeProblem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/reportButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/report"
            android:textColor="@android:color/white"
            android:backgroundTint="#691D1D"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/typeHere"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
