<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RatingDriverAndVehicle">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:padding="20dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/rate_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_us"
            android:textColor="@color/background"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/vehicleRatingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rate_us">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver"
                android:textSize="20sp"/>

            <LinearLayout
                android:id="@+id/driverRatingLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/rate_us"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <ImageView
                    android:id="@+id/driverStar1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_star_border"
                    android:padding="4dp"/>

                <ImageView
                    android:id="@+id/driverStar2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_star_border"
                    android:padding="4dp"/>

                <ImageView
                    android:id="@+id/driverStar3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_star_border"
                    android:padding="4dp"/>

                <ImageView
                    android:id="@+id/driverStar4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_star_border"
                    android:padding="4dp"/>

                <ImageView
                    android:id="@+id/driverStar5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_star_border"
                    android:padding="4dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >


            <ImageView
                android:id="@+id/vehicleStar1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_star_border"
                android:padding="4dp"/>

            <ImageView
                android:id="@+id/vehicleStar2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_star_border"
                android:padding="4dp"/>

            <ImageView
                android:id="@+id/vehicleStar3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_star_border"
                android:padding="4dp"/>

            <ImageView
                android:id="@+id/vehicleStar4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_star_border"
                android:padding="4dp"/>

            <ImageView
                android:id="@+id/vehicleStar5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_star_border"
                android:padding="4dp"/>
        </LinearLayout>
        </GridLayout>
    <EditText
        android:id="@+id/typeHere"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        android:hint="@string/leave_a_comment"
        android:textColorHint="@color/background"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/vehicleRatingLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/reportButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/green"
        android:gravity="center"
        android:padding="0dp"
        app:layout_constraintTop_toBottomOf="@id/typeHere"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>